@@ -11,6 +11,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
 
 var Logger = require("./logger");
 var fs = require("fs");
+var path = require("path");
 var $util = require("./utilities");
 
 module.exports = function (Server) {
@@ -60,16 +61,16 @@ module.exports = function (Server) {
     });
 
     /* REGION channels */
-    
+
     /* data about a specific channel */
     app.get("/api/channels/:channel", function (req, res) {
         Server.stats.record("api", "/api/channels/:channel");
         var name = req.params.channel;
-        if(!name.match(/^[\w-_]+$/)) {
+        if(!$util.isValidChannelName(name)) {
             res.send(404);
             return;
         }
-        
+
         var data = {
             name: name,
             loaded: false
@@ -125,7 +126,7 @@ module.exports = function (Server) {
         }
 
         // If we get here, the filter is public channels
-        
+
         var channels = [];
         for(var key in Server.channels) {
             var channel = Server.channels[key];
@@ -170,11 +171,11 @@ module.exports = function (Server) {
                 });
                 return;
             }
-            
+
             // Only record login-success for admins
             if(row.global_rank >= 255)
                 ActionLog.record(getIP(req), name, "login-success");
-            
+
             res.jsonp({
                 success: true,
                 name: name,
@@ -201,7 +202,7 @@ module.exports = function (Server) {
                 });
                 return;
             }
-            
+
             if(toomany) {
                 ActionLog.record(ip, name, "register-failure",
                                  "Too many recent registrations");
@@ -225,7 +226,7 @@ module.exports = function (Server) {
 
 
             if(!$util.isValidUserName(name)) {
-                ActionLog.record(ip, name, "register-failure", 
+                ActionLog.record(ip, name, "register-failure",
                                  "Invalid name");
                 res.jsonp({
                     success: false,
@@ -338,11 +339,11 @@ module.exports = function (Server) {
             }
 
             var msg = "A password reset request was issued for your " +
-                      "account '"+ name + "' on " + Server.cfg["domain"] + 
+                      "account '"+ name + "' on " + Server.cfg["domain"] +
                       ".  This request is valid for 24 hours.  If you did "+
                       "not initiate this, there is no need to take action."+
                       "  To reset your password, copy and paste the " +
-                      "following link into your browser: " + 
+                      "following link into your browser: " +
                       Server.cfg["domain"] + "/reset.html?"+hash;
 
             var mail = {
@@ -435,7 +436,7 @@ module.exports = function (Server) {
                 });
                 return;
             }
-        
+
             db.setUserProfile(name, { image: img, text: text },
                               function (err, dbres) {
                 if(err) {
@@ -483,8 +484,7 @@ module.exports = function (Server) {
         }
 
         if(email.match(/.*@(localhost|127\.0\.0\.1)/i)) {
-            res.jsonp({
-                success: false,
+            res.jsonp({ success: false,
                 error: "Nice try, but no"
             });
             return;
@@ -583,7 +583,7 @@ module.exports = function (Server) {
             ActionLog.listActions(types, function (err, actions) {
                 if(err)
                     actions = [];
-                
+
                 res.jsonp(actions);
             });
         });
@@ -597,10 +597,11 @@ module.exports = function (Server) {
                 return;
             }
             var start = data.size - len;
-            if(start < 0) {
+            if(start < 0)
                 start = 0;
-            }
             var end = data.size - 1;
+            if(end < 0)
+                end = 0;
             fs.createReadStream(file, { start: start, end: end })
                 .pipe(res);
         });
@@ -630,7 +631,7 @@ module.exports = function (Server) {
                 return;
             }
 
-            pipeLast(res, "sys.log", 1048576);
+            pipeLast(res, path.join(__dirname, "../sys.log"), 1048576);
         });
     });
 
@@ -658,7 +659,7 @@ module.exports = function (Server) {
                 return;
             }
 
-            pipeLast(res, "error.log", 1048576);
+            pipeLast(res, path.join(__dirname, "../error.log"), 1048576);
         });
     });
 
@@ -692,9 +693,11 @@ module.exports = function (Server) {
                 return;
             }
 
-            fs.exists("chanlogs/" + chan + ".log", function(exists) {
+            fs.exists(path.join(__dirname, "../chanlogs", chan + ".log"),
+                      function(exists) {
                 if(exists) {
-                    pipeLast(res, "chanlogs/" + chan + ".log", 1048576);
+                    pipeLast(res, path.join(__dirname, "../chanlogs",
+                             chan + ".log"), 1048576);
                 } else {
                     res.send(404);
                 }
