@@ -11,6 +11,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
 */
 
 var fs = require("fs");
+var path = require("path");
 var Poll = require("./poll.js").Poll;
 var Media = require("./media.js").Media;
 var Logger = require("./logger.js");
@@ -101,7 +102,8 @@ var Channel = function(name, Server) {
     self.ip_alias = {};
     self.name_alias = {};
     self.login_hist = [];
-    self.logger = new Logger.Logger("chanlogs/" + self.canonical_name + ".log");
+    self.logger = new Logger.Logger(path.join(__dirname, "../chanlogs",
+                                    self.canonical_name + ".log"));
     self.i = 0;
     self.time = new Date().getTime();
     self.plmeta = {
@@ -146,7 +148,8 @@ Channel.prototype.loadDump = function() {
     var self = this;
     if(self.name === "")
         return;
-    fs.stat("chandump/" + self.name, function (err, stats) {
+    fs.stat(path.join(__dirname, "../chandump", self.name),
+            function (err, stats) {
         if(!err) {
             var mb = stats.size / 1048576;
             mb = parseInt(mb * 100) / 100;
@@ -154,13 +157,14 @@ Channel.prototype.loadDump = function() {
                 Logger.errlog.log("Large chandump detected: " + self.name +
                                   " (" + mb + " MB)");
                 self.updateMotd("Your channel file has exceeded the " +
-                                "maximum size of 1MB and cannot be " + 
-                                "loaded.  Please ask an administrator " + 
+                                "maximum size of 1MB and cannot be " +
+                                "loaded.  Please ask an administrator " +
                                 "for assistance in restoring it.");
                 return;
             }
         }
-        fs.readFile("chandump/" + self.name, function(err, data) {
+        fs.readFile(path.join(__dirname, "../chandump", self.name),
+                    function(err, data) {
             if(err) {
                 if(err.code == "ENOENT") {
                     Logger.errlog.log("WARN: missing dump for " + self.name);
@@ -286,7 +290,7 @@ Channel.prototype.saveDump = function() {
         js: this.js
     };
     var text = JSON.stringify(dump);
-    fs.writeFileSync("chandump/" + this.name, text);
+    fs.writeFileSync(path.join(__dirname, "../chandump", this.name), text);
 }
 
 // Save channel dumps every 5 minutes, in case of crash
@@ -398,7 +402,7 @@ Channel.prototype.tryRegister = function (user) {
                 return;
             }
 
-            self.server.actionlog.record(user.ip, user.name, 
+            self.server.actionlog.record(user.ip, user.name,
                              "channel-register-success", self.name);
             self.registered = true;
             self.initialized = true;
@@ -438,7 +442,7 @@ Channel.prototype.unregister = function (user) {
             });
             return;
         }
-        
+
         self.registered = false;
         user.socket.emit("unregisterChannel", { success: true });
     });
@@ -638,7 +642,7 @@ Channel.prototype.tryIPBan = function(actor, name, range) {
                 }
 
                 self.ipbans[ip] = [name, actor.name];
-                self.logger.log("*** " + actor.name + " banned " + ip + 
+                self.logger.log("*** " + actor.name + " banned " + ip +
                                 " (" + name + ")");
 
                 for(var i = 0; i < self.users.length; i++) {
@@ -1271,7 +1275,7 @@ Channel.prototype.tryQueue = function(user, data) {
 
 Channel.prototype.addMedia = function(data, user) {
     var self = this;
-    if(data.type === "yp" && 
+    if(data.type === "yp" &&
        !self.hasPermission(user, "playlistaddlist")) {
         user.socket.emit("queueFail", "You don't have permission to add " +
                          "playlists");
@@ -1488,7 +1492,7 @@ Channel.prototype.tryDequeue = function(user, data) {
 
     if(typeof data !== "number")
         return;
-    
+
     var plitem = this.playlist.items.find(data);
     if(plitem && plitem.media)
         this.logger.log("### " + user.name + " deleted " + plitem.media.title);
@@ -1508,7 +1512,7 @@ Channel.prototype.tryUncache = function(user, data) {
         if(err)
             return;
 
-        self.logger.log("*** " + user.name + " deleted " + data.id + 
+        self.logger.log("*** " + user.name + " deleted " + data.id +
                         " from library");
     });
 }
@@ -1619,12 +1623,12 @@ Channel.prototype.move = function(data, user) {
         if(typeof data.moveby !== "undefined")
             moveby = data.moveby;
 
-        
+
         var fromit = chan.playlist.items.find(data.from);
         var afterit = chan.playlist.items.find(data.after);
         var aftertitle = afterit && afterit.media ? afterit.media.title : "";
         if(fromit) {
-            chan.logger.log("### " + user.name + " moved " + fromit.media.title 
+            chan.logger.log("### " + user.name + " moved " + fromit.media.title
                           + (aftertitle ? " after " + aftertitle : ""));
         }
 
@@ -2066,7 +2070,7 @@ Channel.prototype.trySetRank = function(user, data) {
         receiver.rank = data.rank;
         if(receiver.loggedIn) {
             self.saveRank(receiver, function (err, res) {
-                self.logger.log("*** " + user.name + " set " + 
+                self.logger.log("*** " + user.name + " set " +
                                 data.user + "'s rank to " + data.rank);
                 self.sendAllWithPermission("acl", "setChannelRank", data);
             });
@@ -2080,8 +2084,8 @@ Channel.prototype.trySetRank = function(user, data) {
                 return;
             self.server.db.setChannelRank(self.name, data.user,
                                           data.rank, function (err, res) {
-            
-                self.logger.log("*** " + user.name + " set " + 
+
+                self.logger.log("*** " + user.name + " set " +
                                 data.user + "'s rank to " + data.rank);
                 self.sendAllWithPermission("acl", "setChannelRank", data);
             });
