@@ -10,6 +10,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
 */
 
 var fs = require("fs");
+var path = require("path");
 
 function getTimeString() {
     var d = new Date();
@@ -51,8 +52,8 @@ Logger.prototype.close = function () {
     }
 }
 
-var errlog = new Logger("error.log");
-var syslog = new Logger("sys.log");
+var errlog = new Logger(path.join(__dirname, "../error.log"));
+var syslog = new Logger(path.join(__dirname, "../sys.log"));
 errlog.actualLog = errlog.log;
 errlog.log = function(what) { console.log(what); this.actualLog(what); }
 syslog.actualLog = syslog.log;
