@@ -96,7 +96,8 @@ var Server = {
         this.db = new Database(self.cfg);
         this.db.init();
         this.actionlog = require("./actionlog")(self);
-        this.httpaccess = new Logger.Logger("httpaccess.log");
+        this.httpaccess = new Logger.Logger(path.join(__dirname, 
+                                            "../httpaccess.log"));
         this.app = express();
         this.app.use(express.bodyParser());
         // channel path
@@ -108,7 +109,9 @@ var Server = {
             else {
                 self.stats.record("http", "/r/" + c);
                 self.logHTTP(req);
-                res.sendfile(__dirname + "/www/channel.html");
+                res.sendfile("channel.html", {
+                    root: path.join(__dirname, "../www")
+                });
             }
         });
 
@@ -118,13 +121,15 @@ var Server = {
         self.app.get("/", function (req, res, next) {
             self.logHTTP(req);
             self.stats.record("http", "/");
-            res.sendfile(__dirname + "/www/index.html");
+            res.sendfile("index.html", {
+                root: path.join(__dirname, "../www")
+            });
         });
 
         // default path
         self.app.get("/:thing(*)", function (req, res, next) {
             var opts = {
-                root: __dirname + "/www",
+                root: path.join(__dirname, "../www"),
                 maxAge: self.cfg["asset-cache-ttl"]
             }
             res.sendfile(req.params.thing, opts, function (err) {
@@ -231,15 +236,17 @@ var Server = {
 
 Logger.syslog.log("Starting CyTube v" + VERSION);
 
-fs.exists("chanlogs", function (exists) {
-    exists || fs.mkdir("chanlogs");
+var chanlogpath = path.join(__dirname, "../chanlogs");
+fs.exists(chanlogpath, function (exists) {
+    exists || fs.mkdir(chanlogpath);
 });
 
-fs.exists("chandump", function (exists) {
-    exists || fs.mkdir("chandump");
+var chandumppath = path.join(__dirname, "../chandump");
+fs.exists(chandumppath, function (exists) {
+    exists || fs.mkdir(chandumppath);
 });
 
-Config.load(Server, "cfg.json", function () {
+Config.load(Server, path.join(__dirname, "../cfg.json"), function () {
     Server.init();
     if(!Server.cfg["debug"]) {
         process.on("uncaughtException", function (err) {
